[gd_scene load_steps=2 format=3 uid="uid://dksfeukmmiwg1"]

[ext_resource type="Script" uid="uid://wqydoikamdg6" path="res://scripts/hud.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 46.0
text = "Score: 0"

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 120.0
offset_bottom = 76.0
text = "Time: 00:00"

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 106.0
text = "Level: 1"

[node name="XPBar" type="ProgressBar" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0, 0, 0, 0)
value = 50.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -40.0
theme_override_colors/font_color = Color(0, 0, 0, 0)
value = 100.0
show_percentage = false

[node name="GameOverPanel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart"
